--- a/HotelApIResult/HotelApIResult.csproj
+++ b/HotelApIResult/HotelApIResult.csproj
@@ -202,6 +202,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\HotelResults.cshtml" />
     <Content Include="Views\Home\HotelInfos.cshtml" />
+    <Content Include="Views\Home\Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -218,6 +219,12 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HotelServices\HotelServices.csproj">
+      <Project>{4b2a2d59-7a12-488f-94af-68fc17850d8b}</Project>
+      <Name>HotelServices</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
