--- a/HotelApIResult/Web.config
+++ b/HotelApIResult/Web.config
@@ -9,6 +9,24 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <!--  My Declareations -->
+    <add key="ClientId" value="ApiIntegrationNew"/>
+    <add key="UserName" value="Pay2cart"/>
+    <add key="Password" value="Pay2cart@123"/>
+
+    <add key="BaseuriUpToCity" value="http://api.tektravels.com/SharedServices/SharedData.svc/"/>
+    <add key="toAuthenticate" value="rest/Authenticate"/>
+    <add key="toLogOut" value="rest/Logout"/>
+    <add key="toCountry" value="rest/CountryList"/>
+    <add key="toDestination" value="rest/DestinationCityList"/>
+    <add key="toTopDestination" value="rest/TopDestinationList"/>
+    
+    <add key="BaseuriFormHotelSearch" value="http://api.tektravels.com/BookingEngineService_Hotel/hotelservice.svc/"/>
+    <add key="toHotelSearch" value="rest/GetHotelResult"/>
+    <add key="toHotelInfo" value="rest/GetHotelInfo"/>
+    <add key="toHotelRoom" value="rest/GetHotelRoom"/>
+    <add key="toBlockRoom" value="rest/BlockRoom"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
