Change of updated

--- a/HotelServices/HotelServices.csproj
+++ b/HotelServices/HotelServices.csproj
@@ -43,5 +43,8 @@
     <Compile Include="GetIp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
