--- a/HotelApIResult/Web.config
+++ b/HotelApIResult/Web.config
@@ -9,19 +9,16 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
     <!--  My Declareations -->
     <add key="ClientId" value="ApiIntegrationNew" />
     <add key="UserName" value="Pay2cart" />
     <add key="Password" value="Pay2cart@123" />
-
     <add key="BaseuriUpToCity" value="http://api.tektravels.com/SharedServices/SharedData.svc/" />
     <add key="toAuthenticate" value="rest/Authenticate" />
     <add key="toLogOut" value="rest/Logout" />
     <add key="toCountry" value="rest/CountryList" />
     <add key="toDestination" value="rest/DestinationCityList" />
     <add key="toTopDestination" value="rest/TopDestinationList" />
-    
     <add key="BaseuriFormHotelSearch" value="http://api.tektravels.com/BookingEngineService_Hotel/hotelservice.svc/" />
     <add key="toHotelSearch" value="rest/GetHotelResult" />
     <add key="toHotelInfo" value="rest/GetHotelInfo" />
@@ -84,4 +81,8 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-<connectionStrings><add name="HotelBookingAuth" connectionString="metadata=res://*/Models.HotelAuthModel.csdl|res://*/Models.HotelAuthModel.ssdl|res://*/Models.HotelAuthModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=jolla;initial catalog=HotelBookingDB;user id=sa;password=jolla;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="HotelBookingAuth" connectionString="metadata=res://*/Models.HotelAuthModel.csdl|res://*/Models.HotelAuthModel.ssdl|res://*/Models.HotelAuthModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=jolla;initial catalog=HotelBookingDB;user id=sa;password=jolla;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="HotelBookingCountryCity" connectionString="metadata=res://*/Models.CountryCityModel.csdl|res://*/Models.CountryCityModel.ssdl|res://*/Models.CountryCityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=jolla;initial catalog=HotelBookingDB;user id=sa;password=jolla;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
