--- a/HotelApIResult/HotelApIResult.csproj
+++ b/HotelApIResult/HotelApIResult.csproj
@@ -303,13 +303,17 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HotelApiServices\HotelApiServices.csproj">
+      <Project>{9cf739ee-8641-4e02-93cd-d3653ed1d9a2}</Project>
+      <Name>HotelApiServices</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HotelServices\HotelServices.csproj">
       <Project>{4b2a2d59-7a12-488f-94af-68fc17850d8b}</Project>
       <Name>HotelServices</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
